--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@emailjs/browser": "^3.6.2",
     "bootstrap": "^5.2.0",
-    "next": "12.2.3",
+    "framer-motion": "^10.2.4",
+    "next": "^12.3.4",
     "react": "18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "18.2.0"
