--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@emailjs/browser": "^3.6.2",
     "bootstrap": "^5.2.0",
     "framer-motion": "^10.2.4",
-    "next": "^12.3.4",
+    "next": "13.1.2",
     "react": "18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "18.2.0"
