--- a/package.json
+++ b/package.json
@@ -9,16 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emailjs/browser": "^3.6.2",
-    "bootstrap": "^5.2.0",
-    "framer-motion": "^10.2.4",
-    "next": "13.1.2",
-    "react": "18.2.0",
-    "react-bootstrap": "^2.4.0",
-    "react-dom": "18.2.0"
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.2",
+    "@mui/material": "^5.15.2",
+    "@types/three": "^0.160.0",
+    "framer-motion": "^10.16.16",
+    "next": "14.0.4",
+    "react": "^18",
+    "react-dom": "^18",
+    "three": "^0.160.0"
   },
   "devDependencies": {
-    "eslint": "8.21.0",
-    "eslint-config-next": "12.2.3"
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.0.4",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
   }
 }
