--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.3.4",
     "@mui/icons-material": "^5.15.2",
     "@mui/material": "^5.15.2",
     "@types/three": "^0.160.0",
@@ -18,7 +19,9 @@
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
-    "three": "^0.160.0"
+    "react-hook-form": "^7.50.0",
+    "three": "^0.160.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
